@startuml

title __VYKRESLOVACE's Class Diagram__\n

  namespace sk.uniza.fri {
    namespace vykreslovace {
      class sk.uniza.fri.vykreslovace.Vykreslenie {
          - batch : SpriteBatch
          - text : BitmapFont
          + Vykreslenie()
          + dispose()
          + render()
          + show()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace vykreslovace {
      class sk.uniza.fri.vykreslovace.VykreslenieKoniecHry {
          - batch : SpriteBatch
          + VykreslenieKoniecHry()
          + dispose()
          + render()
          + show()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace vykreslovace {
      class sk.uniza.fri.vykreslovace.VykreslenieVyhra {
          - batch : SpriteBatch
          + VykreslenieVyhra()
          + dispose()
          + render()
          + show()
      }
    }
  }
  

  sk.uniza.fri.vykreslovace.Vykreslenie -up-|> com.badlogic.gdx.ScreenAdapter
  sk.uniza.fri.vykreslovace.Vykreslenie o-- sk.uniza.fri.Hra : hra
  sk.uniza.fri.vykreslovace.Vykreslenie o-- sk.uniza.fri.MojaHra : mojaHra
  sk.uniza.fri.vykreslovace.VykreslenieKoniecHry -up-|> com.badlogic.gdx.ScreenAdapter
  sk.uniza.fri.vykreslovace.VykreslenieKoniecHry o-- sk.uniza.fri.MojaHra : mojaHra
  sk.uniza.fri.vykreslovace.VykreslenieKoniecHry o-- sk.uniza.fri.gui.Prehra : prehra
  sk.uniza.fri.vykreslovace.VykreslenieVyhra -up-|> com.badlogic.gdx.ScreenAdapter
  sk.uniza.fri.vykreslovace.VykreslenieVyhra o-- sk.uniza.fri.MojaHra : mojaHra
  sk.uniza.fri.vykreslovace.VykreslenieVyhra o-- sk.uniza.fri.gui.Vyhra : vyhra


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
